<package>
  <name>autoware_object_merger</name>
  <version>0.0.1</version>
  <description>The autoware_object_merger package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>eigen</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>autoware_msgs</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>eigen</run_depend>

  <!-- Other dependencies and metadata -->
</package>